# sqlx-crud

./: Cargo.toml
examples/axum/src/: main.rs
examples/mysql-crud/: Cargo.toml
examples/mysql-crud/migrations/: 20230607143039_record.sql  20230607171127_more_fields.sql  20230608165342_timed_fields.sql
examples/mysql-crud/src/: main.rs
examples/serenity/src/: main.rs
sqlx-crud-macros/: Cargo.toml
sqlx-crud-macros/src/: lib.rs
src/: lib.rs  traits.rs
