[package]
edition = "2021"
name = "mysql-crud"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sqlx = {version = "*", features = ["runtime-tokio-rustls", "mysql", "chrono"]}
sqlx-crud = {path = "../..", features = ["default", "default_mysql"]}
tokio = {version = "1", features = ["macros"]}
